2012-11-21  Csaba Osztrogonác  <ossy@webkit.org>

        [Qt] Unreviewed gardening, unskip now passing tests.

        * platform/qt-5.0/TestExpectations:

2012-11-21  Csaba Osztrogonác  <ossy@webkit.org>

        [Qt] Unreviewed gardening, unskip a now passing test, update an expected file.

        * platform/qt-5.0/TestExpectations:
        * platform/qt-5.0/editing/selection/click-left-of-rtl-wrapping-text-expected.txt:

2012-11-21  Csaba Osztrogonác  <ossy@webkit.org>

        [Qt] Unreviewed gardening, unskip now passing tests.

        * platform/qt/TestExpectations:

2012-11-21  Yury Semikhatsky  <yurys@chromium.org>

        Unreviewed. Mark css3/filters/effect-reference-ordering-hw.html as crashing after crrev.com/168998

        * platform/chromium/TestExpectations:

2012-11-21  Alexander Pavlov  <apavlov@chromium.org>

        Turn -webkit-text-emphasis into a shorthand property
        https://bugs.webkit.org/show_bug.cgi?id=102879

        Reviewed by Antti Koivisto.

        Update expected results.

        * fast/css/parsing-text-emphasis-expected.txt:
        * fast/css/parsing-text-emphasis.html:

2012-11-21  Csaba Osztrogonác  <ossy@webkit.org>

        [Qt] Unreviewed gardening, unskip a now passing test.

        * platform/qt-5.0-wk2/TestExpectations:
        * platform/qt/TestExpectations:

2012-11-21  Csaba Osztrogonác  <ossy@webkit.org>


        * platform/qt-5.0-wk2/TestExpectations:

2012-11-21  David Grogan  <dgrogan@chromium.org>

        IndexedDB: remove setVersion from inspector tests
        https://bugs.webkit.org/show_bug.cgi?id=102850

        Reviewed by Vsevolod Vlasov.

        setVersion was contained so the conversion to upgradeneeded was
        straightforward.

        * http/tests/inspector/indexeddb/database-data-expected.txt:
        * http/tests/inspector/indexeddb/database-structure-expected.txt:
        * http/tests/inspector/indexeddb/indexeddb-test.js: